# rat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: alice_n_bob.rat  closure.rat  fact.rat  fib.rat  mergesort.rat  parallel-mergesort.rat  person.rat  towards_zero.rat
lib/: math.rat  seq.rat  std.rat
rat/: Cargo.toml
rat-cli/: Cargo.toml  build.rs
rat-cli/src/: error.rs  main.rs
rat/src/: boolean.rs  builtin.rs  channel.rs  codegen.rs  decimal.rs  dictionary.rs  effect.rs  error.rs  evaluate.rs  evaluator.rs  expression.rs  globals.rs  grammar.pest  grammar_choreographic.pest  grammar_typified.pest  identifier.rs  integer.rs  lib.rs  locution.rs  parser.rs  process.rs  quote.rs  record.rs  signal.rs  source.rs  string.rs  symbol.rs  verb.rs  vocabulary.rs  word.rs
