# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Davide Di Carlo <daddinuz@gmail.com>"]
description = "The Rat Programming Language"
edition = "2021"
keywords = ["rat", "rust", "programming-language", "concatenative", "concurrency"]
license = "MPL-2.0"
name = "rat"
repository = "https://github.com/daddinuz/rat"
rust-version = "1.80"
version = "0.1.0"

[dependencies]
dirs = "5"
pest = "2"
pest_derive = "2"
ustr = "1"
